--- a/package.json
+++ b/package.json
@@ -3,12 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "autoprefixer": "^10.4.4",
+    "axios": "^0.26.1",
+    "postcss-cli": "^9.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-lazy-load-image-component": "^1.5.4",
+    "react-player": "^2.10.0",
+    "react-redux": "^7.2.8",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-video-js-player": "^1.1.1",
+    "tailwindcss": "^3.0.23",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
